Fixing the float issue
We have fixed the float issue where the bottom package was trying to fill the place of the floated element. The text of the overlapped element floated around the floated element.

To fix this we added a clearfix element which clears floated elements.

--- a/complete_guide_to_css/diving-deeper-01-project-introducing-the-box-model-starting-code/packages/packages.css
+++ b/complete_guide_to_css/diving-deeper-01-project-introducing-the-box-model-starting-code/packages/packages.css
@@ -41,12 +41,20 @@ main {
     font-size: 20px;
 }
 
+.clearfix {
+    clear: both;
+}
+
 #plus {
     background: rgba(213, 255, 220, 0.95);
 }
 
 #free {
     background: rgba(234, 252, 237, 0.95);
+    float: right;
+    border-right: none;
+    border-left: 4px solid #0e4f1f;
+    text-align: right;
 }
 
 #premium {
